--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,26 +1,34 @@
 embed_assets: on
+package_assets: always
 
 javascripts:
-  common:
+  portfolio:
     - public/javascripts/jquery.js
     - public/javascripts/*.js
-  portfolio:
-    - public/javascripts/fancybox/jquery.easing-1.3.pack.js
-    - public/javascripts/fancybox/jquery.mousewheel-3.0.4.pack.js
     - public/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js
+  blog:
+    - public/javascripts/jquery.js
+    - public/javascripts/*.js
   post:
+    - public/javascripts/jquery.js
+    - public/javascripts/*.js
+    - public/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js
     - public/javascripts/sh/scripts/*.js
 
 stylesheets:
-  common:
+  portfolio:
     - public/stylesheets/daviferreira.css
     - public/stylesheets/msgtopo.css
-  portfolio:
     - public/stylesheets/portfolio.css
     - public/javascripts/fancybox/*.css
   blog:
+    - public/stylesheets/daviferreira.css
+    - public/stylesheets/msgtopo.css
     - public/stylesheets/blog.css
   post:
+    - public/stylesheets/daviferreira.css
+    - public/stylesheets/msgtopo.css
+    - public/stylesheets/blog.css
     - public/javascripts/sh/styles/shCore.css
     - public/javascripts/sh/styles/shThemeDefault.css
 
