--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,9 @@
+RewriteEngine on
+
+RewriteBase /
+RewriteCond %{HTTP_HOST} !^www.daviferreira.com$ [NC]
+RewriteRule ^(.*)$ http://www.daviferreira.com/$1 [L,R=301]
+
 Header unset ETag
 FileETag None
 
@@ -23,10 +29,4 @@ ExpiresByType image/gif "access plus 1 month"
 ExpiresByType image/jpeg "access plus 1 month"
 ExpiresByType image/png "access plus 1 month"
  
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^(daviferreira\.com)(:80)? [NC]
-RewriteRule ^(.*) http://www.daviferreira.com/$1 [R=301,L]
-RewriteCond %{HTTP_HOST} ^(.*)(daviferreira\.com\.br)(:80)? [NC]
-RewriteRule ^(.*) http://www.daviferreira.com/$1 [R=301,L]
-
 order deny,allow
