--- a/config/assets.yml
+++ b/config/assets.yml
@@ -14,6 +14,7 @@ javascripts:
     - public/javascripts/*.js
     - public/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js
     - public/javascripts/jquery.snippet.min.js
+    - public/javascripts/blog/post.js
 
 stylesheets:
   portfolio:
