--- a/config/assets.yml
+++ b/config/assets.yml
@@ -26,6 +26,7 @@ stylesheets:
     - public/stylesheets/bootstrap.min.css
     - public/stylesheets/blog.css
   post:
+    - public/stylesheets/bootstrap.min.css
     - public/stylesheets/msgtopo.css
     - public/stylesheets/blog.css
     - public/stylesheets/jquery.snippet.min.css
